# KubeFn

./: .gitignore  AGENTS.md  CITATION.cff  CLAUDE.md  Dockerfile.cluster  Dockerfile.demo  Dockerfile.polyglot  README.md  build.gradle.kts  install.sh  jitpack.yml  settings.gradle.kts  sonatype
.github/workflows/: ci.yml  release.yml
benchmarks/: cross-runtime-baseline.sh
comparison/spring-boot-checkout/: README.md  build.gradle.kts
demos/: benchmark-honest.sh  load-test.sh
deploy/crds/: kubefnfunction-crd.yaml  kubefngroup-crd.yaml
deploy/grafana/: kubefn-dashboard.json
deploy/manifests/: example-function.yaml
deploy/rbac/: kubefn-rbac.yaml
docs/: developer-guide.md  whitepaper.html  whitepaper.md
examples/checkout-pipeline/: build.gradle.kts
examples/database-functions/: build.gradle.kts
examples/groovy-functions/: build.gradle.kts
examples/kotlin-functions/: build.gradle.kts
examples/polyglot-demo/: build.gradle.kts
examples/scala-functions/: build.gradle.kts
gradle/: libs.versions.toml
kubefn-api/: build.gradle.kts
kubefn-bridge/: Cargo.toml
kubefn-bridge/src/: broker.rs  main.rs  protocol.rs  shared_mem.rs
kubefn-cli/: kubefn
kubefn-contracts/: build.gradle.kts
kubefn-runtime/: build.gradle.kts
kubefn-runtime-node/: Dockerfile  package.json
kubefn-runtime-node/src/: circuit-breaker.js  drain-manager.js  heap-exchange.js  heap-guard.js  index.js  introspection.js  loader.js  (+4 more)
kubefn-runtime-python/: Dockerfile.demo  pyproject.toml
kubefn-runtime-python/kubefn/: __init__.py  __main__.py  circuit_breaker.py  drain_manager.py  heap_exchange.py  heap_guard.py  introspection.py  metrics.py  request_timeout.py  scheduler.py  server.py
kubefn-runtime-python/tests/: test_heap_exchange.py
kubefn-vscode/: README.md  package.json
website/: index.html
(+124 files in other folders)
