[package]
name = "kubefn-bridge"
version = "0.1.0"
edition = "2024"
description = "KubeFn Cross-Language Bridge — UDS control plane + shared memory data plane"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dashmap = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
nix = { version = "0.29", features = ["mman", "socket", "process"] }
flatbuffers = "24"

[profile.release]
opt-level = 3
lto = true
